feat: reload commands